// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET_USERS_REPORT.SUCCESS adds users count to global org 1`] = `
Object {
  "all": Array [
    Object {
      "community": true,
      "contactReport": Object {
        "memberCount": 100000,
        "some_prop": "Roge",
      },
      "id": "_global_community_id",
      "name": "MissionHub Community",
      "user_created": true,
    },
    Object {
      "id": "1",
      "name": "Roger's community",
    },
  ],
}
`;

exports[`should load contact reports for all organizations 1`] = `
Object {
  "all": Array [
    Object {
      "contactReport": Object {
        "contactsCount": 12,
        "id": "123",
        "unassignedCount": 10,
        "uncontactedCount": 10,
      },
      "id": "123",
      "name": "test org 1",
    },
    Object {
      "contactReport": Object {
        "contactsCount": 23,
        "id": "234",
        "unassignedCount": 10,
        "uncontactedCount": 14,
      },
      "id": "234",
      "name": "test org 2",
    },
  ],
}
`;

exports[`should save loaded orgs 1`] = `
Object {
  "all": Array [
    Object {
      "community": true,
      "id": "_global_community_id",
      "name": "MissionHub Community",
      "user_created": true,
    },
    Object {
      "id": "123",
    },
    Object {
      "id": "234",
    },
  ],
  "membersPagination": Object {
    "hasNextPage": true,
    "page": 1,
  },
  "surveysPagination": Object {
    "hasNextPage": true,
    "page": 1,
  },
}
`;
